--- a/Restful comments/views/comments/show.ejs
+++ b/Restful comments/views/comments/show.ejs
@@ -10,5 +10,8 @@
     <h1>Comment id : <%= comment.id %></h1>
     <h2> <%= comment.comment %> - <%= comment.username %></h2>
     <a href="/comments/<%= comment.id %>/edit">Edit</a>
+    <form action="/comments/<%= comment.id%>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
 </body>
 </html>
